networks.tf
resource "aws_vpc" "default" {
    cidr_block = var.vpc_cidr
    tags = merge(
        local.common_tags,
        {
            Name = "VPC-${local.owner}"
        },
    )
}

resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.default.id
    map_public_ip_on_launch = true
    cidr_block = var.public_subnet_cidr
    tags = merge(
        local.common_tags,
        {
            Name = "Public_Subnet-${local.owner}"
        },
    )
}

resource "aws_route_table" "route" {
    vpc_id = aws_vpc.default.id

    route {
        gateway_id = aws_internet_gateway.default.id
        cidr_block = "0.0.0.0/0"
    }

    tags = local.common_tags
}

resource "aws_internet_gateway" "default" {
    vpc_id = aws_vpc.default.id

    tags = local.common_tags
}

resource "aws_security_group" "ssh" {
    vpc_id = aws_vpc.default.id
    name = "SG for SSH"
    description = "SG for VPC - allow SSH connections"

    tags = local.common_tags

    # SSH access from anywhere
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    # Internet access to anywhere
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
